--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Henry Liu</h1>
-    <p>Hi, my name is Henry, I'm a third year double majoring in Data science and Bioengineering (Bioinformatics track). 
+    <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
         I like sleeping, exercising, and gaming in my free time. 
     </p>
     
