Added navigation menu

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Henry Liu: Personal site and portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <a href="./">Home</a>
+        <a href="projects/">Projects</a>
+        <a href="contact/">Contact</a>
+    </nav>
     <h1>Henry Liu</h1>
     <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
-        I like sleeping, exercising, and gaming in my free time. 
+        I like sleeping, exercising, and gaming in my free time.
     </p>
-    
+    <img src="images/IMG_2461.jpeg" 
+    alt="Udon noodles with raw egg, parmesan cheese, butter, pepper, and bacon tempura — my favorite meal from my previous Japan trip.">
+
+
 </body>
 </html>
