Updated navigation menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="./">Home</a>
         <a href="projects/">Projects</a>
         <a href="contact/">Contact</a>
+        <a href="https://github.com/henrylliu" target="_blank">Profile</a>
     </nav>
     <h1>Henry Liu</h1>
     <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
