--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
+        <a href="https://github.com/henrylliu" target="_blank">Profile</a>
     </nav>
     <h1>Contact</h1>
 </body>
