--- a/projects/index.html
+++ b/projects/index.html
@@ -10,6 +10,7 @@
         <a href="../">Home</a>
         <a href="../projects/">Projects</a>
         <a href="../contact/">Contact</a>
+        <a href="https://github.com/henrylliu" target="_blank">Profile</a>
     </nav>
     <h1>Projects</h1>
     
