--- a/contact/index.html
+++ b/contact/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
+        <a href="../">Home</a>
+        <a href="../projects/">Projects</a>
+        <a href="../contact/">Contact</a>
         <a href="https://github.com/henrylliu" target="_blank">Profile</a>
     </nav>
     <h1>Contact</h1>
