Updated navigation menu

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <nav>
-        <a href="./">Home</a>
-        <a href="projects/">Projects</a>
-        <a href="contact/">Contact</a>
-        <a href="https://github.com/henrylliu" target="_blank">Profile</a>
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="projects/">Projects</a></li>
+            <li><a href="contact/">Contact</a></li>
+            <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
+        </ul>
     </nav>
     <h1>Henry Liu</h1>
     <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
