--- a/contact/index.html
+++ b/contact/index.html
@@ -20,15 +20,15 @@
     <form action="mailto:hel044@ucsd.edu" method="POST" enctype="text/plain" >
         <label for="email">
             Email: 
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email">
         </label>
         <label for="subject">
             Subject:
-            <input type="text" name="subject" id="subject" required>
+            <input type="text" name="subject" id="subject">
         </label>
         <label for="body">
             Body:
-            <textarea name="body" id="body" cols="30" rows="3" required></textarea>
+            <textarea name="body" id="body" cols="30" rows="3"></textarea>
         </label>
         <button type="submit">Submit</button>
     </form>
