--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@
     </nav>
     <h1>Contact</h1>
 
-    <form action="mailto:hel044@ucsd.edu" method="POST" enctype="text/plain" >
+    <form action="mailto:hel044@ucsd.edu" method="POST" enctype="text/plain">
         <label for="email">
             Email: 
             <input type="email" name="email" id="email">
@@ -30,7 +30,7 @@
             Body:
             <textarea name="body" id="body" cols="30" rows="3"></textarea>
         </label>
-        <button type="submit">Submit</button>
+        <button>Submit</button>
     </form>
 </body>
 </html>
