--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,8 @@
         <ul>
             <li><a href="../">Home</a></li>
             <li><a href="../projects/">Projects</a></li>
-            <li><a href="../contact/">Contact</a></li>
+            <li><a href="./">Contact</a></li>
+            <li><a href="../resume/">Resume</a></li>
             <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
         </ul>
     </nav>
