--- a/projects/index.html
+++ b/projects/index.html
@@ -10,8 +10,9 @@
     <nav>
         <ul>
             <li><a href="../">Home</a></li>
-            <li><a href="../projects/">Projects</a></li>
+            <li><a href="./">Projects</a></li>
             <li><a href="../contact/">Contact</a></li>
+            <li><a href="../resume/">Resume</a></li>
             <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
         </ul>
     </nav>
