Update navigation menu names

--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
             <li><a href="../projects/">Projects</a></li>
             <li><a href="../contact/">Contact</a></li>
             <li><a href="./" class="current">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
+            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     <!-- Section heading -->
