--- a/contact/index.html
+++ b/contact/index.html
@@ -13,10 +13,10 @@
             <li><a href="../projects/">Projects</a></li>
             <li><a href="./" class="current">Contact</a></li>
             <li><a href="../resume/">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
+            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
         </ul>
     </nav>
-    <h1>Contact</h1>
+    <h1>Contact me</h1>
 
     <form action="mailto:hel044@ucsd.edu" method="POST" enctype="text/plain">
         <label for="email">
@@ -27,11 +27,11 @@
             Subject:
             <input type="text" name="subject" id="subject">
         </label>
-        <label for="body">
-            Body:
+        <label for="message">
+            Message:
             <textarea name="body" id="body" cols="30" rows="3"></textarea>
         </label>
-        <button>Submit</button>
+        <button>Send</button>
     </form>
 </body>
 </html>
