--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="projects/">Projects</a></li>
             <li><a href="contact/">Contact</a></li>
             <li><a href="resume/">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
+            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     <h1>Henry Liu</h1>
