--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
             <li><a href="./" class="current">Projects</a></li>
             <li><a href="../contact/">Contact</a></li>
             <li><a href="../resume/">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">Profile</a></li>
+            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     <h1>Projects</h1>
