--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,68 @@
             <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
         </ul>
     </nav>
-    <h1>Projects</h1>
+    <h1>Projects</h1><div class="projects">
+        <article>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sit. Totam laudantium corrupti vitae amet obcaecati ullam expedita, officia quis nulla, laboriosam modi sunt excepturi tenetur harum nam reprehenderit possimus.</p>
+        </article>
+        <article>
+            <h2>Voluptatum asperiores dicta culpa.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aut dicta voluptatum quisquam! Repellat voluptatibus architecto cupiditate mollitia eaque. Earum necessitatibus, illo expedita suscipit aliquid quisquam aperiam illum a id neque. Ipsum possimus, odio iste reiciendis cum nobis iure.</p>
+        </article>
+        <article>
+            <h2>Blanditiis quam officia perspiciatis.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Iste voluptas iusto minima voluptatem quaerat reprehenderit nisi quod asperiores ab tempora porro illo consequatur architecto, temporibus beatae error sit. Voluptatem reprehenderit quod sit nemo, deleniti modi magnam illum ea!</p>
+        </article>
+        <article>
+            <h2>Eos fugiat fugit veritatis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Temporibus minus nisi animi consequuntur! Ipsam ducimus, eveniet id quaerat, perferendis deserunt quibusdam velit inventore autem maxime eaque ipsum, quae reprehenderit quod aliquam ullam consequatur! Assumenda harum incidunt sint? Fuga?</p>
+        </article>
+        <article>
+            <h2>Similique non laudantium iusto?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Perspiciatis aliquam, rerum nobis assumenda ea quasi deleniti! Adipisci reprehenderit consectetur cumque expedita eveniet possimus qui esse, dolorum quidem? Laboriosam similique excepturi rem ad quod ab inventore repellendus provident expedita?</p>
+        </article>
+        <article>
+            <h2>Voluptatem omnis officiis dolore?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Placeat illum, esse, culpa repellat dolorem molestiae excepturi perferendis et, impedit quo repudiandae dolore aut suscipit nisi omnis dignissimos! Molestiae earum rem sunt. Laborum, eligendi. Adipisci voluptates ratione pariatur nisi.</p>
+        </article>
+        <article>
+            <h2>Ab magni aperiam quas.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aspernatur tempora totam earum suscipit similique sapiente error pariatur, nemo harum dicta natus praesentium dolor numquam ex voluptates magni quaerat optio dolores saepe delectus, repudiandae, vel commodi quos! Temporibus, recusandae!</p>
+        </article>
+        <article>
+            <h2>Debitis quisquam vero deleniti.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Expedita doloremque dolore veritatis? Qui dolore, cupiditate eaque blanditiis velit vero molestias fuga ex atque nam quaerat nulla delectus animi autem ipsam, enim eos sapiente quis veniam aliquam illum obcaecati!</p>
+        </article>
+        <article>
+            <h2>Illo quo laborum obcaecati.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Tempore deserunt aspernatur, fugit quasi consectetur, alias maiores perspiciatis quis iusto fugiat error dolorum odio, vitae placeat eius deleniti voluptatum harum magnam qui non repudiandae! Perspiciatis sed optio excepturi. Tempora.</p>
+        </article>
+        <article>
+            <h2>Porro id ut atque.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Laudantium assumenda cumque nemo fugit, eos delectus eaque facilis quasi quisquam aliquid sunt corrupti. Laudantium voluptas, alias, dolores eum quisquam doloribus odit velit cum consequatur omnis quasi, adipisci perferendis repellendus.</p>
+        </article>
+        <article>
+            <h2>Ipsam facilis rem voluptatum.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Possimus laudantium, voluptate illum explicabo reprehenderit atque debitis dolores recusandae id quisquam doloremque culpa facere quasi error iure labore architecto numquam consectetur. Magnam ea, cum autem laborum sunt id quod.</p>
+        </article>
+        <article>
+            <h2>Laboriosam illo sed quis?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Quisquam, recusandae dignissimos delectus fuga deleniti libero esse modi in. Voluptatem ullam facilis aliquam adipisci doloribus incidunt obcaecati fugit odit soluta alias odio aut culpa, doloremque, omnis dolore libero nisi.</p>
+        </article>
+    </div>
     
 </body>
 </html>
