--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="./" class="current">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="projects/">Projects</a></li>
             <li><a href="contact/">Contact</a></li>
             <li><a href="resume/">Resume</a></li>
