Remove nav menu of all pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,18 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="../style.css">
-    <script type="module" src="../global.js"></script>
+    <script type="module" src="../global.js" defer></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="../projects/">Projects</a></li>
-            <li><a href="./">Contact</a></li>
-            <li><a href="../resume/">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
-        </ul>
-    </nav>
     <h1>Contact me</h1>
 
     <form action="mailto:hel044@ucsd.edu" method="POST" enctype="text/plain">
