--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Henry Liu: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="global.js"></script>
+    <script type="module" src="global.js" defer></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="./">Home</a></li>
-            <li><a href="projects/">Projects</a></li>
-            <li><a href="contact/">Contact</a></li>
-            <li><a href="resume/">Resume</a></li>
-            <li><a href="https://github.com/henrylliu" target="_blank">GitHub</a></li>
-        </ul>
-    </nav>
     <h1>Henry Liu</h1>
     <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
         I like sleeping, exercising, and gaming in my free time.
