--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <p>Hi, my name is Henry, I'm a third year UCSD student double majoring in Data science and Bioengineering (Bioinformatics track). 
         I like sleeping, exercising, and gaming in my free time.
     </p>
-    <img src="images/IMG_2461.jpeg" 
-    alt="Udon noodles with raw egg, parmesan cheese, butter, pepper, and bacon tempura — my favorite meal from my previous Japan trip.">
-
-
+    <img src="images/IMG_5084.jpeg" 
+    alt="A picture of me ziplining during my Hawaii trip">
+    
+    <h2>Latest Projects</h2>
+    <div class="projects">
+        <!-- Dynamically added content will appear here -->
+    </div>
+    <script src="index.js" type="module" defer></script>
+    <div id="profile-stats"></div>
 </body>
 </html>
