Read CSV into D3

--- a/meta/index.html
+++ b/meta/index.html
@@ -8,9 +8,11 @@
     <script type="module" src="../global.js" defer></script>
 </head>
 <body>
+    <script src="main.js" type="module"></script>
     <h1 class="meta-title">Meta</h1>
     <p>This page includes stats about the code of this website.</p>
-    <script src="../global.js" type="module"></script>
+
+    <div id="stats"></div>
 
 </body>
 </html>
