Plot dots of commit times

--- a/meta/index.html
+++ b/meta/index.html
@@ -12,6 +12,8 @@
     <h1 class="meta-title">Meta</h1>
 
     <div id="stats"></div>
+    <h2>Commits by time of day</h2>
+    <div id="chart"></div>
 
 </body>
 </html>
