--- a/meta/index.html
+++ b/meta/index.html
@@ -11,6 +11,14 @@
     <script src="main.js" type="module"></script>
     <h1 class="meta-title">Meta</h1>
 
+    <div style="display: flex; align-items: baseline;">
+      <label style="flex: 1;">
+        Show commits until:
+        <input type="range" id="commit-progress" min="0" max="100" value="100">
+        <time id="commit-time" style="margin-left: auto;"></time>
+      </label>
+    </div>
+
     <div id="stats"></div>
     <h2>Commits by time of day</h2>
     <div id="chart"></div>
