--- a/meta/index.html
+++ b/meta/index.html
@@ -18,22 +18,20 @@
         <time id="commit-time" style="margin-left: auto;"></time>
       </label>
     </div>
-
-    <dl id="files">
-      <!-- we want the following structure for each file:
-      <div>
-        <dt>
-          <code>{file.name}</code>
-        </dt>
-        <dd>{file.lines.length} lines</dd>
-      </div>
-      -->
-    </dl>
-
+    
 
     <div id="stats"></div>
-    <h2>Commits by time of day</h2>
-    <div id="chart"></div>
+
+    <div id="scrolly-1">
+      <div id="scatter-story"></div>
+
+      <div id="scatter-plot">
+        <h2>Commits by time of day</h2>
+        <div id="chart"></div>
+        <p id="selection-count">No commits selected</p>
+        <dl id="language-breakdown" class="stats"></dl>
+      </div>
+    </div>
 
     <dl id="commit-tooltip" class="info tooltip" hidden>
         <dt>Commit</dt>
@@ -54,8 +52,18 @@
         <dt>Lines edited</dt>
         <dd id="commit-lines"></dd>
       </dl>
-      <p id="selection-count">No commits selected</p>
-      <dl id="language-breakdown" class="stats"></dl>
+
+      <dl id="files">
+        <!-- we want the following structure for each file:
+        <div>
+          <dt>
+            <code>{file.name}</code>
+          </dt>
+          <dd>{file.lines.length} lines</dd>
+        </div>
+        -->
+      </dl>
+
 
 </body>
 </html>
